Fix ability rarity pill alignment

--- a/css/abilities.css
+++ b/css/abilities.css
@@ -98,6 +98,7 @@
 }
 
 .ability-card__rarity {
+  align-self: start;
   justify-self: start;
 }
 
